# ragsynth

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
configs/: v1_local_corpus.yaml  v1_toy.yaml  v2_fiqa.yaml  v2_legalbench_rag.yaml  v2_nfcorpus.yaml
data/sample/: chunks.jsonl  queries.jsonl
docs/: metrics-explainer.html
experiments/v1/: analysis.ipynb  config.yaml  metrics.json  records.jsonl  report.md
experiments/v1/artifacts/: demand-movmf.npz  manifest.json  partition-c8.npz
experiments/v1_local_corpus/: metrics.json  records.jsonl  report.md
experiments/v1_local_corpus/artifacts/: demand-movmf.npz  manifest.json  partition-c8.npz
reference/: synth_query_eval.py
scripts/: convert_benchmark.py  fetch_benchmarks.py
specs/v2/: 01-real-benchmarks.md  02-graded-pooled-qrels-umbrela.md  03-prompt-optimizer-execution.md  04-soft-demand-diversity-metrics.md  05-distributed-execution-db-backends.md  06-content-coverage-exploration.md  README.md
src/ragsynth/: __init__.py  cli.py  optional_deps.py
src/ragsynth/adapters/: __init__.py
src/ragsynth/adapters/embedder/: __init__.py  base.py  cached_chroma.py  cached_embedder.py  chroma_vector_store.py  gemini.py  hashed.py  mock.py  st.py  vector_store.py
src/ragsynth/adapters/judge/: __init__.py  base.py  llm_judge.py  mock.py
src/ragsynth/adapters/llm/: __init__.py  base.py  cached.py  mock.py  openai_compatible.py
src/ragsynth/adapters/retriever/: __init__.py  base.py  bm25s.py  dense_inmemory.py
src/ragsynth/arms/: __init__.py  a0_naive.py  a1_quota.py  a2_spec.py  base.py  oracle.py
src/ragsynth/datasets/: __init__.py  base.py  jsonl_loader.py  sample_corpus.py  toy_world.py
src/ragsynth/datasets/converters/: __init__.py  base.py  fiqa.py  legalbench_rag.py  nfcorpus.py
src/ragsynth/domain/: __init__.py  annotation.py  candidate.py  chunk.py  context.py  conversation.py  query.py  rejection.py  report.py  seed.py  stratum.py
src/ragsynth/gate/: __init__.py
src/ragsynth/gate/checks/: __init__.py  answerability.py  base.py  dedup.py  round_trip.py  uniqueness.py  zero_context.py
src/ragsynth/io/: __init__.py  artifacts.py  embeddings.py
src/ragsynth/metrics/: __init__.py  diversity.py  efficiency.py  fidelity.py
src/ragsynth/metrics/validity/: __init__.py  agreement.py  controls.py  systems.py
src/ragsynth/optimization/: __init__.py  base.py  mipro_adapter.py  noop.py  objectives.py
src/ragsynth/pipeline/: __init__.py  base.py  pipeline.py  registry.py  serialization.py
src/ragsynth/sampling/: __init__.py  demand.py  movmf.py  partition.py  spec_sampler.py  vmf.py
src/ragsynth/steps/: __init__.py  context_assembler.py  curator.py  gate.py  generator.py  qrel_builder.py  seed_sampler.py  validator.py
src/ragsynth/steps/prompts/: answer_first_v1.j2  revise_v1.j2
tests/: conftest.py  helpers.py  test_cli.py  test_optional_deps.py  test_scripts_convert_benchmark.py  test_version.py
tests/adapters/: test_cached_chat.py  test_cached_chroma_embedder.py  test_cached_embedder_store_abstraction.py  test_dense_retriever.py  test_extras_stubs.py  test_gemini_embedder.py  test_hashed_embedder.py  test_llm_judge.py  test_mocks.py  test_openai_compatible.py  test_st_embedder_dim.py
tests/arms/: test_arms.py
tests/datasets/: test_jsonl_loader.py  test_sample_corpus.py  test_toy_world.py
tests/datasets/converters/: test_converters_base.py  test_converters_registry.py  test_fiqa.py  test_legalbench_rag.py  test_nfcorpus.py
tests/domain/: test_models.py
tests/e2e/: test_determinism.py  test_local_corpus.py  test_toy_world_table.py
tests/fixtures/benchmarks/fiqa/raw/: corpus.jsonl  queries.jsonl
tests/fixtures/benchmarks/fiqa/raw/qrels/: test.tsv  train.tsv
tests/fixtures/benchmarks/legalbench_rag/raw/benchmarks/: contractnli.json  cuad.json
tests/fixtures/benchmarks/nfcorpus/raw/: corpus.jsonl  queries.jsonl
tests/gate/: test_checks.py
tests/io/: test_artifacts.py  test_embeddings.py
tests/metrics/: test_diversity.py  test_efficiency.py  test_fidelity.py
tests/metrics/validity/: test_agreement.py  test_controls.py  test_systems.py
tests/optimization/: test_optimization.py
tests/pipeline/: test_base.py  test_contract.py  test_pipeline.py  test_registry.py  test_roundtrip_outputs.py  test_serialization.py  test_v2_configs.py
tests/sampling/: test_demand.py  test_movmf.py  test_partition.py  test_spec_sampler.py  test_vmf.py
tests/steps/: conftest.py  test_context_assembler.py  test_curator.py  test_gate.py  test_generator.py  test_qrel_builder.py  test_seed_sampler.py  test_validator.py
(+6 files in other folders)
